--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Lista de Precios - iPhones Refurbished
-description: 
+title: Architect theme
+description: Architect is a theme for GitHub Pages.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-architect
